# skills

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE.template.md  LICENSE  Makefile  README.md  external_skills.txt  external_skills.yaml  pyproject.toml  settings.template.json
.claude/: settings.json  statusline-command.sh
.claude-plugin/: marketplace.json
.claude/agents/: coding.md  dev.md  lead.md
.claude/hooks/: reject-shell-operators.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  dependabot-automerge.yaml  pr-label-guard.yml  updater.yaml
main/: main.py
mental-models/: countermeasure-not-caveat.md  swiss-cheese-model.md
repo-rulesets/: main-branch-protection.json
scripts/: audit_notes.py  close_stale_issues.sh  fix_tags.py  normalize_skills.py  setup-labels.sh  sync_external.py
skills/: README.md
skills/agent_coordinator/: SKILL.md
skills/antithesize/: REFERENCE.md  SKILL.md
skills/ask-questions/: SKILL.md
skills/ask_questions/: SKILL.md
skills/beast_mode/: SKILL.md
skills/blueprint_tracker/: SKILL.md
skills/capture/: SKILL.md
skills/capture_inbox/: SKILL.md
skills/check_odds/: SKILL.md
skills/checkpoint/: SKILL.md
skills/claude-code-config/: SKILL.md  env-vars.md  hooks.md
skills/claude_code_config/: SKILL.md
skills/complexity_router/: SKILL.md
skills/concise-writing/: SKILL.md
skills/context_compiler/: SKILL.md
skills/daily_briefing/: SKILL.md
skills/data_science/: SKILL.md
skills/debug/: SKILL.md
skills/deep_mode/: SKILL.md
skills/dimensionalize/: REFERENCE.md  SKILL.md
skills/discussion-partners/: SKILL.md
skills/discussion_partners/: SKILL.md
skills/evergreen/: SKILL.md
skills/excavate/: REFERENCE.md  SKILL.md
skills/forecast/: SKILL.md
skills/gh_cli/: SKILL.md
skills/google_docs/: SKILL.md
skills/handlize/: SKILL.md
skills/heartbeat/: MACHINE_ACCOUNT.md  SKILL.md  com.anthropic.claude-heartbeat.plist  heartbeat-repos.conf.example  heartbeat.env.example
skills/hierarchical-memory/: SKILL.md
skills/hierarchical_memory/: SKILL.md
skills/inductify/: SKILL.md
skills/issue_creator/: SKILL.md
skills/issue_curator/: SKILL.md
skills/issue_prs/: SKILL.md
skills/jina_grep/: SKILL.md
skills/lean_prover/: SKILL.md
skills/llm_judge/: SKILL.md
skills/march_madness/: SKILL.md  pyproject.toml
(+257 files in other folders)
