[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main/"]

[project]
name = "agent-skills"
version = "0.1.0"
description = "A shared collection of interoperable agent skills"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "marker-pdf>=1.0.0",
    "polars>=1.0.0",
    "pydantic-ai>=0.0.31",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
