[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main/"]

[project]
name = "agent-skills"
version = "0.1.0"
description = "A shared collection of interoperable agent skills"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "modal>=1.3.3",
    "pydantic-ai>=1.62.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.58.0"]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
